Bug 1676301. Only set mResolutionUpdated if we are changing the resolution. r=kats

We incorrectly set it when going from the mResolution.isNothing() to the *mResolution == 1.f case.

Differential Revision: https://phabricator.services.mozilla.com/D97385